// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createCurrencyFormat returns the expected format config 1`] = `
Object {
  "decimalLength": 2,
  "decimalSymbol": ",",
  "prefix": "",
  "suffix": " €",
  "thousandsSeparatorSymbol": ".",
}
`;

exports[`createCurrencyFormat returns the expected format config 2`] = `
Object {
  "decimalLength": 2,
  "decimalSymbol": ".",
  "prefix": "$",
  "suffix": "",
  "thousandsSeparatorSymbol": ",",
}
`;

exports[`createCurrencyFormat returns the expected format config 3`] = `
Object {
  "decimalLength": 2,
  "decimalSymbol": ".",
  "prefix": "￥",
  "suffix": "",
  "thousandsSeparatorSymbol": ",",
}
`;

exports[`createCurrencyFormat returns the expected format config 4`] = `
Object {
  "decimalLength": 2,
  "decimalSymbol": ".",
  "prefix": "£",
  "suffix": "",
  "thousandsSeparatorSymbol": ",",
}
`;

exports[`createCurrencyFormat returns the expected format config 5`] = `
Object {
  "decimalLength": 2,
  "decimalSymbol": ",",
  "prefix": "R$",
  "suffix": "",
  "thousandsSeparatorSymbol": ".",
}
`;

exports[`createCurrencyFormat returns the expected format config 6`] = `
Object {
  "decimalLength": 0,
  "decimalSymbol": null,
  "prefix": "",
  "suffix": " JPY",
  "thousandsSeparatorSymbol": " ",
}
`;
